@@ -6,6 +6,10 @@ major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
 
+06/22/01 mpeterson@caldera.com
+Fixed up logging of registration and known DAs so that logging does not
+occur changes are made to the databases
+
 *** Tag OpenSLP 0.9.1 ****
 
 06/13/01 mpeterson@caldera.com
